syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.mellowtech.zero.grpc";
option java_outer_classname = "ZeroProto";

package zero;

service ZeroService {


    rpc CreateTimer (ZNewTimer) returns (ZTimer) {}
    rpc GetTimer (ZTimerRequest) returns (ZTimerResponse) {}
    rpc GetCounter (ZCounterRequest) returns (ZCounterResponse) {}
    rpc ListTimers (ZSearchRequest) returns (ZTimerResponse) {}
    rpc AddSplit (ZNewSplit) returns (ZSplit) {}
    rpc GetSplits (ZSplitRequest) returns (ZSplitResponse) {}
    rpc CreateUser (ZNewUser) returns (ZUser) {}
    rpc GetUser (ZUserRequest) returns (ZUser) {}
}

enum ZCounterType {
    FULL = 0;
    YEARS = 1;
    MONTHS = 2;
    DAYS = 3;
    HOURS = 4;
    MINUTES = 5;
    SECONDS = 6;
    MILLIS = 7;
}

message ZSearchRequest {}

message ZTimerRequest {
    oneof critera {
        int64 id = 1;
        string title = 2;
        string desc = 3;
    }
}

message ZTimerResponse {
    repeated ZTimer timer = 1;
}

//Instant on the timeline in UTC
message ZInstant {
    int64 seconds = 1; //epoch seconds
    int32 nanos = 2; //nanos from the start ot the second
}

message ZSplit {
    int64 id = 1;
    int64 timer = 2;
    ZInstant time = 3; //if not defined an Instant will be generated in server
    string description = 4;
}

message ZNewSplit {
    int64 timer = 1;
    ZInstant time = 2;
    string description = 3;
}

message ZSplitRequest {
    int64 timer = 1;
}

message ZSplitResponse {
    repeated ZSplit split = 1;
}

message ZTimer {
    int64 id = 1;
    string title = 2;
    ZInstant start = 3;
    ZInstant stop = 4;
    string zone = 5;
    string desc = 6;
}

message ZNewTimer {
    string title = 1;
    int64 user = 2;
    ZInstant start = 3;
    oneof duration {
        ZInstant stop = 4;
        int64 millis = 5;
    }
    string zoneId = 6;
    string desc = 7;
}

message ZNewUser {
    string username = 1;
    string email = 2;
}

message ZUserRequest {
    string username = 1;
}

message ZUser {
    int64 id = 1;
    string username = 2;
    string email = 3;
}

message ZCounterRequest {
    int64 id = 1;
    bool remaining = 2;
    ZCounterType counterType = 3;
}

message ZCounterResponse {
    ZCounter counter = 1;
    ZCounterType counterType = 2;
}

message ZCounter {
    int64 years = 1;
    int64 months = 2;
    int64 days = 3;
    int64 hours = 4;
    int64 minutes = 5;
    int64 seconds = 6;
    int64 millis = 7;
}







